[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "machbus"
version = "0.1.5"
description = "Python bindings for the machbus ISO 11783 / J1939 / NMEA2000 networking stack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "machbus"
